@@ -8,14 +8,18 @@ dist: trusty
 
 env:
   global:
-    - Run_RPushbullet_Tests="yes"
-    - Run_RPushbullet_Tests_All="yes"
+    # condition this on have secure environment variables which PRs off forks do not
+    # cf https://docs.travis-ci.com/user/environment-variables/
+    - if [ "$TRAVIS_SECURE_ENV_VARS" == "true" ]; then Run_RPushbullet_Tests="yes"; fi
+    - if [ "$TRAVIS_SECURE_ENV_VARS" == "true" ]; then Run_RPushbullet_Tests_All="yes"; fi
 
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
   - ./run.sh bootstrap
   # decrypt the file .rpushbullet.json, cf https://docs.travis-ci.com/user/encrypting-files/
-  - openssl aes-256-cbc -K $encrypted_988d19a907a0_key -iv $encrypted_988d19a907a0_iv -in .rpushbullet.json.enc -out ~/.rpushbullet.json -d
+  # condition this on have secure environment variables which PRs off forks do not
+  # cf https://docs.travis-ci.com/user/environment-variables/
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == "true" ]; then openssl aes-256-cbc -K $encrypted_988d19a907a0_key -iv $encrypted_988d19a907a0_iv -in .rpushbullet.json.enc -out ~/.rpushbullet.json -d; fi
   
 install:
   - ./run.sh install_aptget r-cran-curl r-cran-jsonlite
